--- a/package.json
+++ b/package.json
@@ -11,7 +11,20 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.3.4",
+    "@astrojs/mdx": "^2.0.2",
+    "@astrojs/react": "^3.0.8",
+    "@contentful/rich-text-html-renderer": "^16.3.0",
+    "@contentful/rich-text-types": "^16.3.0",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18",
     "astro": "^4.0.7",
-    "typescript": "^5.3.3"
+    "gray-matter": "^4.0.3",
+    "moment": "^2.29.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "remark-html": "^16.0.1",
+    "remark-parse": "^11.0.0",
+    "typescript": "^5.3.3",
+    "unified": "^11.0.4"
   }
 }
