--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/check": "^0.3.4",
     "@astrojs/mdx": "^2.0.2",
+    "@astrojs/preact": "^3.0.1",
     "@astrojs/react": "^3.0.8",
     "@contentful/rich-text-html-renderer": "^16.3.0",
     "@contentful/rich-text-types": "^16.3.0",
@@ -20,6 +21,7 @@
     "astro": "^4.0.7",
     "gray-matter": "^4.0.3",
     "moment": "^2.29.4",
+    "preact": "^10.19.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remark-html": "^16.0.1",
