--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,9 @@
   "extends": "astro/tsconfigs/strict",
   "compilerOptions": {
     "jsx": "react-jsx",
-    "jsxImportSource": "react",
+    "jsxImportSource": "preact",
     "strictNullChecks": true,
-    "allowJs": true
+    "allowJs": true,
+    "verbatimModuleSyntax": true,
   }
 }
