--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
+    "deploy": "wrangler pages deploy dist/",
     "astro": "astro"
   },
   "dependencies": {
@@ -28,5 +29,9 @@
     "remark-parse": "^11.0.0",
     "typescript": "^5.3.3",
     "unified": "^11.0.4"
+  },
+  "devDependencies": {
+    "create-cloudflare": "^2.37.4",
+    "wrangler": "^3.107.2"
   }
 }
