--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "astro check && astro build",
     "preview": "astro preview",
     "deploy": "wrangler pages deploy dist/",
+    "export:books": "bun scripts/export-book-shelf.ts",
     "astro": "astro"
   },
   "dependencies": {
